# Warehouse_Automation-ARIAC-2019

./: README.md  robot_controller.cpp
group2_final/: CMakeLists.txt  package.xml
group2_final/config/: ariac.scene  final_project_a.yaml
group2_final/launch/: group2-final.launch
group2_final/src/: order_manager.cpp  robot_controller.cpp  sensor.cpp
group2_rwa5/: CMakeLists.txt  README.md
group2_rwa5/config/: edit.yaml  final_project_a.yaml  my_sample.yaml  my_sample_sensors.yaml  my_sample_trial.yaml  sample-rwa5.yaml  trial.yaml
group2_rwa5/doc/: faulty_products_example.txt  instructions.txt
group2_rwa5/group2_rwa5/: README.md  package.xml
group2_rwa5/group2_rwa5/config/: my_sample.yaml
group2_rwa5/group2_rwa5/include/ariac_manager/: competition.h
group2_rwa5/group2_rwa5/launch/: group2-rwa5.launch
group2_rwa5/group2_rwa5/src/: ariac_part_manager.cpp
group2_rwa5/include/ariac_manager/: Upload files.desktop  ariac_part_manager.h  competition.h  order_manager.h  robot_controller.h  sensor.h
group2_rwa5/launch/: flipped_parts.launch  group2-rwa5.launch
group2_rwa5/src/: main.cpp  order_manager.cpp  robot_controller.cpp  sensor.cpp
